# sqlite-vacuum

./: Cargo.toml
src/: cli_args.rs  main.rs  sqlite_file.rs
